# bitirmeprojesi

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  generate_keys.py  main.py  prd.md  pyproject.toml  requirements.txt  start_celery_worker.py  todo.md
app/: __init__.py
app/api/: admin.py  ambiance.py  books.py  discovery.py  leaderboard.py  library.py  me.py  reading.py
app/core/: auth.py  database.py  dependencies.py  redis_client.py  storage.py
app/middleware/: rate_limit.py
app/models/: book.py  chapter.py  library.py  reading.py  text_chunk.py  user.py
app/providers/: __init__.py  audio_provider.py  clipdrop_provider.py  gemini_provider.py  image_provider.py  llm_provider.py  local_image_provider.py  mmaudio_provider.py  ollama_provider.py  stable_audio_provider.py
app/services/: audit_service.py  book_processing_service.py  semantic_splitter.py
app/tasks/: __init__.py  book_tasks.py  celery_app.py
app/templates/admin/: dashboard.html
app/utils/: api_logger.py  file_validator.py  logger.py  pagination.py  text_extraction.py
docs/: ENV_CONFIGURATION.md  SETUP_GUIDE.md  SUPABASE_SETUP.md
pipeline-test/: README.md  index.html  test_pipeline.py
stable-audio-3/: .gitignore  LICENSE  README.md  pyproject.toml  run_gradio.py
stable-audio-3/.github/workflows/: lint.yml
stable-audio-3/docs/guides/: model-overview.md  prompting.md
stable-audio-3/docs/workflows/: autoencoder.md  inference.md  lora.md
stable-audio-3/optimized/mlx/: .gitignore  README.md  benchmark.sh  bootstrap.sh  install.sh  requirements.txt  sa3
stable-audio-3/optimized/mlx/ableton/: README.md  insert_audio.py
stable-audio-3/optimized/mlx/ableton/AudioInserter/: AudioInserter.py  __init__.py
stable-audio-3/optimized/mlx/scripts/: benchmark.py  examples.py  install.py  sa3_mlx.py  test_all_configs.py  weights.py
stable-audio-3/optimized/tensorRT/: .gitignore  README.md  bootstrap.sh  install.sh  requirements.txt  sa3  sa3-gradio
stable-audio-3/optimized/tensorRT/scripts/: bench_dit_profile.py  diff_attn_nocast_plugin.py  pt_inference.py  runtime.py  sa3_gradio.py  sa3_trt.py  sa3_trt_core.py  spec.py  triton_swa_v2.py
stable-audio-3/scripts/: pre_encode_dataset.py  train_lora.py
stable-audio-3/stable_audio_3/: __init__.py  cli.py  factory.py  loading_utils.py  model.py  model_configs.py  verbose.py
stable-audio-3/stable_audio_3/data/: dataset.py  utils.py
stable-audio-3/stable_audio_3/inference/: audio_utils.py  distribution_shift.py  sampling.py
stable-audio-3/stable_audio_3/interface/: aeiou.py  diffusion_cond.py  reprompt.py
stable-audio-3/stable_audio_3/training/: diffusion.py  utils.py
stable-audio-3/tests/: conftest.py  test_autoencoder.py  test_cli.py  test_gradio_interface.py  test_inference.py  test_lora.py
stable-audio-3/tests/utils/: audio.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_social_reading.sql
tests/: conftest.py
tests/integration/: conftest.py  test_books_api.py
tests/unit/: test_audit_service.py  test_providers.py  test_reading_stats.py  test_semantic_splitter.py  test_stable_audio_provider.py  test_text_extractor.py
volumes/api/: kong.yml
