[project]
name = "bitirmeprojesi"
version = "0.1.0"
description = "Bitirme projesi backend"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "supabase",
    "google-genai",
    "ebooklib",
    "pypdf",
    "python-docx",
    "aiofiles",
    "httpx",
    "python-dotenv",
    "beautifulsoup4",
    "diffusers",
    "transformers",
    "accelerate",
    "requests",
    "redis",
    "hiredis",
    "python-magic",
    "python-magic-bin; sys_platform == 'win32' or sys_platform == 'darwin'",
    "slowapi",
    "celery",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "torchaudio",
    "stable-audio-3",
    "psutil",
    "safetensors>=0.8.0",
    "cryptography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
stable-audio-3 = { path = "stable-audio-3", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
